<resources>
    <string name="app_name">My Routes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_trips">Trips</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_new">New Trip</string>

    <string name="action_create_trip">Create Trip</string>

    <string name="title">Trip Name</string>
    <string name="photo_name">Photo Name</string>
    <string name="description">Description</string>

    <string name="timer_text">00:00:00</string>

    <string name="map_activity_start_button">Start</string>
    <string name="map_activity_pause_button">Pause</string>
    <string name="map_activity_stop_button">Stop</string>

    <string name="dialog_stoptrip">Reached the End of the Trip?</string>
    <string name="dialog_stop">End Trip</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="trip_header_title">Trip Name</string>
    <string name="trip_header_date">Date</string>
    <string name="trip_header_time">Time</string>

    <string name="endtrip_activity_done_button">Back to Trips</string>
    <string name="summary_date">Date:</string>
    <string name="summary_time_taken">Time Taken:</string>
    <string name="summary_distance_traveled">Distance Travelled:</string>
    <string name="summary_average_temp">Average Temperature:</string>
    <string name="summary_average_pressure">Average Pressure:</string>

    <string name="photo_description">Description:</string>
    <string name="photo_temp">Temp:</string>
    <string name="photo_press">Pressure:</string>

    <string name="content_description">Our logo</string>
</resources>
