<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.ac.shef.oak.com4510.showTrip.ShowTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="0"
                android:background="@drawable/border2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:text="@string/summary_date"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/view_date"
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:layout_weight="0"
                android:background="@drawable/border2"
                android:orientation="vertical">

                <TextView
                    android:text="@string/summary_time_taken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/view_time_taken"
                    android:layout_height="wrap_content"
                    android:layout_width="100dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="0"
                android:background="@drawable/border2"
                android:orientation="vertical">

                <TextView
                    android:text="@string/summary_distance_traveled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/view_distance_traveled"
                    android:layout_height="wrap_content"
                    android:layout_width="100dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="1"
                android:background="@drawable/border2"
                android:orientation="vertical">

                <TextView
                    android:text="@string/summary_average_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/view_average_temp"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="1"
                android:background="@drawable/border2"
                android:orientation="vertical">

                <TextView
                    android:text="@string/summary_average_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="12sp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/view_average_pressure"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_tripgallery"
        android:name="uk.ac.shef.oak.com4510.showTrip.TripGalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

</LinearLayout>