<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:paddingLeft="10dp"
                android:text="@string/trip_header_date"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:paddingLeft="10dp"
                android:text="@string/trip_header_time"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/border"
                android:paddingLeft="10dp"
                android:text="@string/trip_header_title"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>