<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.ac.shef.oak.com4510.ShowImageActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:id="@+id/image"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="0"
       android:orientation="horizontal">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:layout_weight="1"
          android:background="@drawable/border2"
          android:orientation="vertical">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:textSize="14sp"
             android:text="@string/photo_temp"
             android:textColor="#000000" />

         <TextView
             android:id="@+id/view_photo_temp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:textSize="14sp"
             android:textColor="#000000" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:layout_weight="1"
          android:background="@drawable/border2"
          android:orientation="vertical">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:textSize="14sp"
             android:text="@string/photo_press"
             android:textColor="#000000" />

         <TextView
             android:id="@+id/view_photo_press"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:textSize="14sp"
             android:textColor="#000000" />
      </LinearLayout>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_weight="0"
       android:background="@drawable/border2"
       android:orientation="vertical"
       android:padding="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:text="@string/photo_description"
          android:textColor="#000000"
          android:textSize="14sp" />

      <TextView
          android:id="@+id/view_photo_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textColor="#000000"
          android:textSize="14sp" />
   </LinearLayout>

   <fragment
       android:id="@+id/map"
       class="com.google.android.gms.maps.SupportMapFragment"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1.5"
       android:scrollbars="vertical" />

</LinearLayout>
